2008-01-21  Roland McGrath  <roland@redhat.com>

	* i386_parse.y: Add sanity check for NMNES macro value.
	* Makefile.am (i386_parse.o): Fix target in dependency rule.

2008-01-21  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am (EXTRA_DIST): Remove defs/x86_64.

2008-01-14  Ulrich Drepper  <drepper@redhat.com>

	* defs/i386: Add fixes for opcodes with register number in opcode,
	64-bit immediate forms, nop with rex.B.
	* i386_data.h [X86_64] (FCT_imm64$w): New function.
	(FCT_oreg): New function.
	(FCT_oreg$w): New function.
	* i386_disasm.c (i386_disasm): Reinitialize fmt always before
	starting the loop to process the string.  Handle 0x90 special for
	x86-64.
	* i386_parse.y (fillin_arg): Expand synonyms before concatening to
	form the function name.

2008-01-11  Ulrich Drepper  <drepper@redhat.com>

	* i386_disasm.c (struct output_buffer): Remove symcb and symcbarg.
	(i386_disasm): Remove appropriate initializers.
	Use symcb to lookup symbol strings.

	* i386_disasm.c (struct output_buffer): Add labelbuf, labelbufsize,
	symaddr_use, and symaddr fields.
	(i386_disasm): Remove labelbuf and labelbufsize variables.
	Add back %e format.  Implement %a and %l formats.

	* i386_data.h (general_mod$r_m): Set symaddr_use and symaddr for %rip
	base addressing.

	* i386_disasm.c (i386_disasm): Resize output buffer if necessary.
	Optimize output_data initialization.  Free buffers before return.
	(struct output_data): Remove op1str field.  Adjust code.
	(i386_disasm): Store final NUL btye at end of functions.

2008-01-10  Ulrich Drepper  <drepper@redhat.com>

	* i386_data.h (FCT_crdb): New function.
	(FCT_ccc): Use FCT_crdb.
	(FCT_ddd): Likewise.

	* defs/i386: Fix a few instructions with immediate arguments.

	* i386_disasm.c: Rewrite interface to callback functions for operands
	to take a single pointer to a structure.
	* i386_data.h: Adjust all functions.

2008-01-08  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am: Enable x86-64 again.