@@ -56,6 +56,7 @@
 #include <dwarf.h>
 #include <string.h>
 
+
 int
 dwarf_siblingof (die, result)
      Dwarf_Die *die;
@@ -112,6 +113,7 @@ dwarf_siblingof (die, result)
       else if (this_die.abbrev->has_children)
 	/* This abbreviation has children.  */
 	++level;
+
 
       while (1)
 	{
